<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="@dimen/margin_small"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="@dimen/margin_medium2x"
        android:layout_marginRight="@dimen/margin_medium2x"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            >

            <ImageView
                android:id="@+id/iv_cardview_landscape"
                android:foreground="@drawable/bg_gradient"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/lotte_hotel"
                android:scaleType="centerCrop"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_bookmark_black"
                android:tint="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/iv_rating_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_black_24dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_medium"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_rating_star"
                android:layout_alignTop="@id/iv_rating_star"
                android:text="@string/tv_rating"
                android:textSize="@dimen/textsize_medium"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_price_per_day"
                android:textStyle="bold"
                android:padding="@dimen/margin_mini"
                android:layout_margin="@dimen/margin_medium"
                android:textSize="@dimen/textsize_medium"
                android:layout_alignBottom="@id/iv_cardview_landscape"
                android:layout_alignRight="@id/iv_cardview_landscape"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_price_per_day"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium2x"
            android:layout_marginRight="@dimen/margin_medium2x"
            android:layout_marginTop="@dimen/margin_small">

            <TextView
                android:id="@+id/tv_hotel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_hotel_name"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/tv_hotel_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_hotel_location"
                android:textSize="@dimen/textsize_medium"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/darker_gray"
                android:layout_below="@id/tv_hotel_name"
                android:layout_alignLeft="@id/tv_hotel_name"/>

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GET 50% OFF"
                android:textSize="@dimen/textsize_mini"
                android:textStyle="bold"
                android:textColor="@color/tv_discount_color"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/tv_hotel_name"/>

            <TextView
                android:id="@+id/tv_facilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Free Wifi . Swimming"
                android:textSize="@dimen/textsize_small"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/tv_hotel_location"
                android:layout_below="@id/tv_discount" />



        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>