<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_marginTop="@dimen/margin_medium"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:tint="@color/colorAccent"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                />

            <TextView
                android:paddingLeft="@dimen/margin_small"
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/textsize_small"
                android:layout_toRightOf="@id/iv_location"
                android:layout_alignBaseline="@id/iv_location"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_location"
                android:layout_alignLeft="@id/tv_location"
                android:entries="@array/arr_locations">


            </Spinner>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/profile_picture"
                app:border_color="@color/colorAccent"
                android:scaleType="centerCrop"
                app:border_width="2dp"
                app:elevation="10dp"
                android:layout_marginRight="@dimen/textsize_medium"
                android:layout_alignTop="@id/tv_location"
                />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nearby"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:textSize="@dimen/textsize_medium2x"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_popular"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_medium2x"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_all"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:textSize="@dimen/textsize_medium2x"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>



        </LinearLayout>

</LinearLayout>